# parsec

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  goroutine  justfile  profile  server.yaml  sqlboiler.toml
.github/workflows/: push.yml
analysis/: 2023-03-23-fullrt.ipynb  analysis.ipynb  db.toml.example  pyproject.toml  report.md  report.py
cmd/parsec/: cmd.go  cmd_health.go  cmd_kinesis.go  cmd_node.go  cmd_schedule.go  cmd_schedule_aws.go  cmd_schedule_docker.go  cmd_scheduler.go  cmd_server.go  cmd_server_dht.go  cmd_server_ipni.go  ecs.go  metrics.go  parsec.go
go-libp2p-kad-dht/: dht.go  dht_net.go  dht_options.go  handlers.go
js-libp2p/: Dockerfile  package-lock.json  package.json
js-libp2p/src/: context.ts  heartbeat.ts  index.ts  libp2p.ts  openApi.json  parsec.ts  security.ts  server.ts  service.ts  utils.ts
js-libp2p/test/: http-api.spec.ts
pkg/config/: config.go  ecs.go  ecs_metadata.go
pkg/db/: client.go
pkg/dht/: host.go  ipni.go  metrics.go  provider_store.go  state_common.go  state_models.go  state_prov.go  state_retr.go
pkg/firehose/: firehose.go
pkg/models/: boil_table_names.go  measurements.go  nodes.go  nodes_ecs.go  provides.go  provides_ecs.go  retrievals.go  retrievals_ecs.go  runs.go  schedulers_ecs.go
pkg/parsec/: cluster.go  node.go  server.go  server_common.go  server_info.go  server_provide.go  server_retrieve.go  util.go
pkg/server/: client.go  host.go  host_notifiee.go  metrics.go  notifiee.go  server.go  server_dht.go  server_handlers.go  (+5 more)
(+24 files in other folders)
