[tool.poetry]
name = "parsec"
version = "0.1.0"
description = ""
authors = ["Dennis Trautwein <git@dtrautwein.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
toml = "^0.10.2"
SQLAlchemy = "<2.0.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
